# HaloLinux_Software

./: CMakeLists.txt  README.md
ArmCore/: CMakeLists.txt  armGSP.cpp  armGSP.h
DockingPortCore/ScienceLibraries2_DP/: AbsoluteOrientation.cpp  CMakeLists.txt  Camera.cpp  Camera.h  DenseStereo.h  Frame.cpp  Frame.h  FrameCatalogue.cpp  FrameMatcher.cpp  FrameMatcher.h  Logger.cpp  Logger.h  SimpleTriangulator.h  Triangulator.cpp  gogglesTiming.h
DockingPortCore/ScienceLibraries2_DP/dynamic-isam_DP/: DenseVis2.cpp  FactorVariableNoise.h  inertialParams.h
DockingPortCore/ScienceLibraries2_DP/libelas-src_DP/: triangle.h
DockingPortCore/ScienceLibraries_DP/: CMakeLists.txt  photogrammetry.cpp  stereoFeatureMatcher.h  stereoSAD.cpp  stereoSAD.h
HaloCore/GSP/: CMakeLists.txt  FTDI.cpp  FTDI.h  HALO_SERIAL_FILE.txt  halo.cpp  halo.h  haloGSP.cpp  haloGSP.h  halo_DataStorage.cpp  halo_DataStorage.h  networking.cpp  networking.h  serialib.cpp  serialib.h  spheres.cpp  spheres.h  videoStreaming.cpp  videoStreaming.h
OpticsMountCore/: CMakeLists.txt  opticsmountGSP.cpp  opticsmountGSP.h  opticsmount_Cameras.cpp  opticsmount_Cameras.h  opticsmount_DataStorage.cpp  opticsmount_DataStorage.h  opticsmount_Rectifier.cpp  opticsmount_Rectifier.h
OpticsMountCore/ScienceLibraries/: CMakeLists.txt  photogrammetry.h  stereoFeatureMatcher.cpp  stereoFeatureMatcher.h
OpticsMountCore/ScienceLibraries2/: AbsoluteOrientation.h  CMakeLists.txt  Camera.h  DenseStereo.cpp  FeatureMatcher.cpp  FeatureMatcher.h  FrameCatalogue.h  GlobalFeatureMap.cpp  GlobalFeatureMap.h  GlobalFeatureMatcher.cpp  GlobalFeatureMatcher.h  SimpleTriangulator.cpp  StopWatch.cpp  StopWatch.h  Triangulator.h  gogglesTiming.cpp
OpticsMountCore/ScienceLibraries2/dynamic-isam/: DenseVis2.h  NodeExmap.h  camera3d.h  dynamicPose3d_NL.h  dynamicPose3d_NL.h.backup  inertiaRatios.h  kinematicPose3d.h  nonlinearSystem.cpp  nonlinearSystem.h  rigidBodyDynamics.cpp  rigidBodyDynamics.h  slam_dynamic3d_NL.h
OpticsMountCore/ScienceLibraries2/libelas-src/: elas.h  triangle.cpp
OrfCore/: CMakeLists.txt  orf.cpp  orf.h  orfGSP.cpp  orfGSP.h  utils.h
TestProjects/: CMakeLists.txt
TestProjects/TP_2301_HaloOpticsMountTest/: CMakeLists.txt  testproject.cpp  testproject.h
TestProjects/TP_2301_HaloOpticsMountTest/GSsupportingFiles/: DenseStereo.cpp  DenseStereo.h
TestProjects/TP_2301_HaloOpticsMountTest/libelas-src/: elas.cpp  elas_exception.h
TestProjects/TP_2302_HaloOpticsMountTest_rev2/: CMakeLists.txt  phase1.cpp  phase1.h  testproject.cpp  testproject.h
TestProjects/TP_2303_HaloDockingPortTest/: main.cpp  testproject.cpp  testproject.h
TestProjects/TP_2304_HaloOpticsAndXSCamTest/: CMakeLists.txt  main.cpp  testproject.cpp  testproject.h
TestProjects/TP_2304_HaloOpticsAndXSCamTest/GSsupportingFiles/: haralick_exterior_iter_nonlin.cpp
TestProjects/TP_2305_Halo2DockingPortTest/: CMakeLists.txt  testproject.cpp  testproject.h
TestProjects/TP_2305_Halo2DockingPortTest/GSsupportingFiles/: MEKF.cpp  MEKF.h  additionalGuestscientistCode.cpp
TestProjects/TP_2306_EMI_Test/: CMakeLists.txt  main.cpp  testproject.cpp  testproject.h
TestProjects/TP_2306_EMI_Test/GSsupportingFiles/: additionalGuestscientistCode.h  haralick_exterior_iter_nonlin.h
TestProjects/TP_2400_HaloArmTest/: CMakeLists.txt  serialib.cpp  serialib.h  testproject.cpp  testproject.h
TestProjects/TP_24XX_Template/: CMakeLists.txt  main.cpp  testproject.cpp  testproject.h
TestProjects/TP_2500_CMGAttitudeTest/: Procedures.txt
TestProjects/TP_2600_ORF/: CMakeLists.txt  testproject.cpp  testproject.h
TestProjects/TP_2601_SaveOpticsOrfThermo/: CMakeLists.txt  main.cpp  testproject.cpp  testproject.h
ThermoCamCore/: CMakeLists.txt  thermocam.cpp  thermocam.h  thermocamGSP.cpp  thermocamGSP.h  utils.cpp  utils.h
Utilities/: CMakeLists.txt
Utilities/AlignMesh/: CMakeLists.txt  main.cpp
Utilities/SerialSendTest/: CMakeLists.txt  main.cpp
Utilities/SerialTest/: CMakeLists.txt  main.cpp
Utilities/SerialTest2/: CMakeLists.txt  main.cpp
Utilities/VideoMonitor/: CMakeLists.txt  main.cpp  videoDisplay.cpp  videoDisplay.h
Utilities/VideoMonitorSingleCamera/: CMakeLists.txt  networkServer.cpp  networkServer.h  videoDisplay.h
Utilities/WriteTest/: CMakeLists.txt  main.cpp
Utilities/drivers/pleora/include/: EbVersion.h  PvDisplayWnd.h  PvRegisterInterfaceWnd.h  PvStreamRaw.h  PvTerminalIPEngineWnd.h  PvVersion.h  PvWnd.h
Utilities/drivers/pleora/lib/: libEbNetworkLib.so.4  libEbNetworkLib.so.4.1.7.3007  libEbTransportLayerLib.so.4  libEbTransportLayerLib.so.4.1.7.3007  libPtConvertersLib.so.4  libPtConvertersLib.so.4.1.7.3007  libPtUtilsLib.so.4.1.7  libPtUtilsLib.so.4.1.7.3007  libPvBase.so.3.1.7  libPvBase.so.3.1.7.3007  libPvBuffer.so.3  libPvBuffer.so.3.1.7.3007  libPvDevice.so.3.1.7  libPvDevice.so.3.1.7.3007  libPvGUI.so.3.1  libPvGUI.so.3.1.7.3007  libPvGUIUtils.so.3  libPvGUIUtils.so.3.1.7.3007  libPvGenICam.so.3.1  libPvGenICam.so.3.1.7.3007  libPvPersistence.so.3.1  libPvPersistence.so.3.1.7.3007  libPvSerial.so.3.1.7  libPvSerial.so.3.1.7.3007  libPvStream.so.3  libPvStream.so.3.1.7.3007  libPvStreamRaw.so.3  libPvStreamRaw.so.3.1.7.3007  libPvTransmitterRaw.so.3  libPvTransmitterRaw.so.3.1.7.3007  libPvVirtualDevice.so.3.1  libPvVirtualDevice.so.3.1.7.3007
Utilities/drivers/pleora/lib/log4cxx/: default.logcfg
Utilities/drivers/pleora/module/: build.sh  ebUniversalPro-i686.ko  load.sh  readme.1st  unload.sh
Utilities/drivers/pleora/module/ebUniversalProBuilder/: LFT_Module.c  LFT_Public.h  LFT_Resources.h  Makefile  NET_KMLRXPacket.c  NET_KMLRXPacket.h  NET_KMLUtil.c  NET_KMLUtil.h  NET_RXPacket.h  NET_Types.h  NET_Util.h  OS_Compiler.h  OS_Event.h  OS_GENMemoryPool.h  OS_GENNoOptimizedMemcpy.h  OS_Include.h  OS_Init.h  OS_KMGENShareMemory.h  OS_KMLEvent.c  OS_KMLEvent.h  OS_KMLGCCCompiler.c  OS_KMLGCCCompiler.h  OS_KMLInit.h  OS_KMLLock.c  OS_KMLLock.h  OS_KMLMemory.c  OS_KMLMemory.h  OS_KMLMemoryMap.c  OS_KMLMemoryMap.h  OS_KMLNetwork.c  OS_KMLNetwork.h  OS_KMLRWLock.c  (+25 more)
Utilities/points2Mesh/: CMakeLists.txt  main.cpp
(+465 files in other folders)
