cmake_minimum_required (VERSION 2.6)

#INCLUDE_DIRECTORIES(TP_2301_HaloOpticsMountTest)
# INCLUDE_DIRECTORIES(TP_2302_HaloOpticsMountTest_rev2)
# INCLUDE_DIRECTORIES(TP_2303_HaloDockingPortTest)
# INCLUDE_DIRECTORIES(TP_2304_HaloOpticsAndXSCamTest)
# INCLUDE_DIRECTORIES(TP_2305_Halo2DockingPortTest)
# INCLUDE_DIRECTORIES(TP_2306_EMI_Test)
# INCLUDE_DIRECTORIES(TP_24XX_Template)
INCLUDE_DIRECTORIES(TP_2600_ORF)
INCLUDE_DIRECTORIES(TP_2601_SaveOpticsOrfThermo)

#ADD_SUBDIRECTORY(TP_2301_HaloOpticsMountTest)
# ADD_SUBDIRECTORY(TP_2302_HaloOpticsMountTest_rev2)
# ADD_SUBDIRECTORY(TP_2303_HaloDockingPortTest)
# ADD_SUBDIRECTORY(TP_2304_HaloOpticsAndXSCamTest)
# ADD_SUBDIRECTORY(TP_2305_Halo2DockingPortTest)
# ADD_SUBDIRECTORY(TP_2306_EMI_Test)
# ADD_SUBDIRECTORY(TP_24XX_Template)
ADD_SUBDIRECTORY(TP_2600_ORF)
ADD_SUBDIRECTORY(TP_2601_SaveOpticsOrfThermo)

